Fixed alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,8 @@
 }
 
 .raceChart-radius {
-  border-radius: 0.5rem;
+  border-radius: 0px 10px 10px 0px;
+  height: 6.4vh;
 }
 
 .text-ellipsis {
