--- a/src/components/IndividualDepartmentDetails/IndividualDepartmentDetails.css
+++ b/src/components/IndividualDepartmentDetails/IndividualDepartmentDetails.css
@@ -29,6 +29,11 @@
   text-overflow: ellipsis;
 }
 
+.techno{
+  font-weight: bolder;
+  font-size: 1.419rem;
+}
+
 @media screen and (max-width: 1125px) {
   .chart_data {
     grid-template-columns: 1fr 2fr 1fr;
